# django_lab

./: README.MD  docker-compose.yml  pyproject.toml  requirements.txt
amazonstore/: manage.py
amazonstore/amazonstore/: asgi.py  settings.py  urls.py  wsgi.py
amazonstore/static/css/: product_management.css  styles.css
amazonstore/store/: admin.py  models.py  urls.py  views.py
amazonstore/store/management/commands/: extract_from_csv.py
amazonstore/store/migrations/: 0001_initial.py
amazonstore/templates/: base.html  index.html
amazonstore/templates/jinja2/: index.html  product_management.html
amazonstore/templates/jinja2/macros/: pagination.html  tables.html
amazonstore/templates/macros/: table_macros.html
